--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
                                     <a class="nav-link" href="./pages/projects.html">Projects</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./pages/achievement .html">Achievements</a>
+                                    <a class="nav-link" href="./pages/achievement.html">Achievements</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./pages/services.html">Services</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./pages/blog.html">Blog</a>
@@ -86,7 +89,7 @@
                             </div>
 
                             <p class="card-text">
-                                My name is Ian Boukhatem Ayoub, I'm a full stack developer based in morocco. I have
+                                My name is Boukhatem Ayoub, I'm a full stack developer based in morocco. I have
                                 developed many types of front-end and back-end applications.
 
                                 I'm passionate about computer systems, programming languages, web and mobile
@@ -107,7 +110,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
         </script>
-    <script src="./js/main.js"></script>
+    <!-- <script src="./js/main.js"></script> -->
 </body>
 
 </html>
