updating readme and project files

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -40,9 +40,9 @@
                                 <li class="nav-item active my-1">
                                     <a class="nav-link " href="#">Projects</a>
                                 </li>
-
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./achievement .html">Achievements</a>
+                                    <a class="nav-link" href="./achievement.html">Achievements</a>
+                                </li>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./blog.html">Blog</a>
@@ -88,7 +88,37 @@
                         </div>
                         <!-- my projects -->
                         <div class="card-body mt-4">
-                            <!-- todo Project 1 -->
+                            <!-- todo Project 1.0 -->
+                            <div class="row mt-4 projects">
+                                <div class="col-md-3">
+                                    <img src="../images/projects/project9/invenatire.png" class="d-block w-100 rounded"
+                                        alt="...">
+                                </div>
+                                <div class="col-md-9">
+                                    <h2>
+                                        <a href="https://github.com/BoukhaAyo/My-Project-Overview" target="_blank"
+                                            class="text-decoration-none project-link">Inventory Management
+                                            <img class="arrow-up-right" src="../images/icons/arrow-right.png"
+                                                alt="links image"></a>
+                                    </h2>
+                                    <p>This project is a comprehensive web application designed for effective inventory
+                                        management within a company. Built using the Laravel framework and styled with
+                                        Bootstrap, this application streamlines the process of tracking and managing
+                                        stock levels, ensuring that businesses can operate efficiently and make informed
+                                        decisions.</p>
+                                    <div class="lang_programation">
+                                        <button type="button" class="lang_prog">Laravel</button>
+                                        <button type="button" class="lang_prog">Php</button>
+                                        <button type="button" class="lang_prog">Html</button>
+                                        <button type="button" class="lang_prog">Css</button>
+                                        <button type="button" class="lang_prog">Bootstrap</button>
+                                        <button type="button" class="lang_prog">JavaScript</button>
+                                        <button type="button" class="lang_prog">Laravel Excel (package)</button>
+                                        <button type="button" class="lang_prog">Simple QrCode (package)</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- todo Project 1.1 -->
                             <div class="row mt-4 projects">
                                 <div class="col-md-3">
                                     <img src="../images/projects/project1/home1.png" class="d-block w-100 rounded"
