--- a/pages/services.html
+++ b/pages/services.html
@@ -42,11 +42,11 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="./achievement.html">Achievements</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./services.html">Services</a>
-                                </li>
                                 <li class="nav-item active my-1">
-                                    <a class="nav-link" href="#">Blog</a>
+                                    <a class="nav-link" href="#">Services</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./blog.html">Blog</a>
                                 </li>
                             </ul>
                         </div>
