--- a/pages/projects.html
+++ b/pages/projects.html
@@ -355,7 +355,7 @@
 
                                 <div class="tab">
                                     <input type="radio" name="accordion-2" id="rd3">
-                                    <label for="rd3" class="tab__label">Python Projects</label>
+                                    <label for="rd3" class="tab__label">Other Projects</label>
                                     <div class="tab">
                                         <input type="radio" name="accordion-2" id="rd4">
                                         <label for="rd4" class="tab__close">Close open tab &times;</label>
